@@ -3,6 +3,7 @@ Changelog
 
 0.5-dev - (unreleased)
 ----------------------
+ * Feature: added location field to the video edit form [szabozo0 #4260]
  * Bug fix: brought images that were in thickbox product for video popup [ichimdav #4266]
 
 0.4 - (2011-04-08)
